[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
websocket = "^0.2.1"
pycryptodome = "^3.19.0"
pywebio = "^1.8.2"
python-dotenv = "^1.0.0"
bard = "^0.1"
certifi = "^2023.7.22"
pyexecjs = "^1.5.1"
aiohttp = "^3.8.5"
browser-cookie3 = "^0.19.1"
password-generator = "^0.1.0"
openai = "^0.28.1"
fake-useragent = "^1.2.1"
websockets = "^11.0.3"
twocaptcha = "^0.0.1"
requests = "^2.31.0"
flask = "^3.0.0"
levenshtein = "^0.22.0"
selenium = "^4.13.0"
streamlit = "^1.27.1"
retrying = "^1.3.4"
flask-cors = "^4.0.0"
pydantic = "^2.4.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"